# Ariadne

./: .gitignore  CLAUDE.md  README.md  package.json
.claude/agents/: jd-resume-compare.md
.github/workflows/: ci.yml
data.example/: config.json  profile.md  search-criteria.md
docs/: ACP-MIGRATION.md  HANDOFF.md  UI-UX-RESEARCH.md  notion-sync.md
prompts/archive/: gemini.md
scripts/: notion-sync.js
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: agent.rs  claude.rs  contacts.rs  import.rs  mod.rs  roles.rs  search.rs  settings.rs  tasks.rs
src-tauri/src/commands/acp/: client.rs  install.rs  mcp_server.rs  mod.rs  runtime.rs  tools.rs
ui/: app.js  index.html  styles.css
ui/views/: chat.js  contacts.js  dashboard.js  interview.js  profile.js  roles.js  search.js  settings.js  tasks.js
