[package]
name = "ariadne"
version = "0.1.0"
description = "Job search automation desktop app"
authors = ["Mike Dreyfus"]
edition = "2021"

[lib]
name = "ariadne_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
thiserror = "2"
futures-util = "0.3"

# ACP (Agent Client Protocol) — client-side, connects to external agent subprocesses.
agent-client-protocol = { version = "0.11", features = ["unstable_session_usage"] }
agent-client-protocol-tokio = "0.11"
agent-client-protocol-rmcp = "0.11"
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
shell-words = "1"
axum = "0.8"
tower = "0.5"
tokio-util = "0.7"
